k8s/apps/todo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: todo-api
  name: todo-api
spec:
  ports:
    - port: 8754
      name: tcp
      protocol: TCP
      targetPort: 8754
  selector:
    app: todo-api
