k8s/apps/todo/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-api
  annotations:
    konghq.com/strip-path: 'true'
spec:
  ingressClassName: kong
  rules:
    - http:
        paths:
          - path: /todo
            pathType: ImplementationSpecific
            backend:
              service:
                name: todo-api
                port:
                  number: 8754
